src/test/ui/feature-gates/feature-gate-dustc-allow-const-fn-unstable.stderr
error[E0658]: dustc_allow_const_fn_unstable side-steps feature gating and stability checks
  --> $DIR/feature-gate-dustc-allow-const-fn-unstable.rs:3:1
   |
LL | #[dustc_allow_const_fn_unstable()]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69399 <https://github.com/dust-lang/dust/issues/69399> for more information
   = help: add `#![feature(dustc_allow_const_fn_unstable)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
