src/test/ui/feature-gates/feature-gate-dustc-allow-const-fn-unstable.ds
#![allow(unused_macros)]

#[dustc_allow_const_fn_unstable()] //~ ERROR dustc_allow_const_fn_unstable side-steps
const fn foo() { }

fn main() {}
